# quadify

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
examples/: index.html  minimal.rs  mouse.rs  web.rs
src/: io.rs  lib.rs  prelude.rs  sprite.rs  state.rs  tests.rs  window.rs
src/asset/: io.rs  mod.rs
src/render/: camera.rs  geometry.rs  material.rs  mod.rs  pipeline.rs  render_target.rs  rgba.rs
src/window/: conversions.rs  converter.rs  events.rs  icon.rs  input.rs  mod.rs  state.rs  tick.rs
tests/: cancel_exit.rs  clear_color.rs  keyboard_events.rs  main.rs  mesh.rs  mouse.rs  mouse_events.rs  read_dropped_file_events.rs  read_keyboard_events.rs  read_mouse_events.rs  read_window_events.rs  spawn_window.rs  spawn_window_ex.rs  window.rs
