[package]
name = "quadify"
repository = "https://github.com/StepanTheGreat/quadify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin that integrates miniquad's windowing/rendering/sound API"
keywords = ["bevy", "miniquad"]
categories = ["game-engines"]
readme = "README.md"

[[bin]]
name = "web"
path = "examples/web.rs"

[dependencies]
bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
image = { version = "0", default-features = false }
oneshot = "0.1.6"
vek = { version = "0.16.1", default-features = false, features = [
	"rgba",
	"uv",
] }

[dependencies.miniquad]
package = "miniquad_wasm_bindgen"
git = "https://github.com/sokorototo/miniquad-wasm-bindgen"
features = ["log-impl"]

[dev-dependencies]
image = { version = "*", features = ["png"], default-features = false }
