[package]
name = "quadify"
repository = "https://github.com/StepanTheGreat/quadify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin that integrates miniquad's windowing/rendering/sound API"
keywords = ["bevy", "miniquad"]
categories = ["game-engines"]
readme = "README.md"

[dependencies]
bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
image = { version = "0", default-features = false }
glam = "0.27"

[dependencies.miniquad]
package = "miniquad_wasm_bindgen"
git = "https://github.com/sokorototo/miniquad-wasm-bindgen"
branch = "master"
features = ["log-impl"]

[dev-dependencies]
pollster = "0.3.0"
image = { version = "*", features = ["png"], default-features = false }
